# CppLearning

./: CMakeLists.txt  LICENSE  README.md
1_Trie_structure/: .gitignore  CMakeLists.txt  README.md  test.cpp  trie.cpp  trie.h
1_Trie_structure/src/: trie.cpp  trie.h
1_Trie_structure/test/: test  test.cpp
1_Trie_structure/unittest/: test  test.cpp
2_matrix_class/: .gitignore  README.md  matrix.cpp  matrix.h  test_main.cpp
2_matrix_class/src/: matrix.cpp  matrix.h
2_matrix_class/unittest/: Makefile  catch2_test.cpp  catch2test  cmake_install.cmake  matrixtest  test.cpp  trietest
3_design_patterns/: README.md
3_design_patterns/AbstractFactory/: AbstractFactory.cpp  CoffeeFactory.h  DrinkFactory.h  HotDrink.h  HotDrinkFactory.h  TeaFactory.h
3_design_patterns/Adapter/: Adapter.h  Geometry.h
3_design_patterns/Bridge/: Person.cpp  Person.h
3_design_patterns/Builder/: builder.cpp
3_design_patterns/ChainOfResponsibility/: cor_broker.cpp  cor_pointer.cpp
3_design_patterns/Command/: Command.cpp
3_design_patterns/Composite/: Composite.cpp  Neurons.cpp  graphics.cpp
3_design_patterns/Decorator/: Decorator.cpp
3_design_patterns/Facade/: Bloom.cpp  Console.h  IBuffer.h  Viewport.h
3_design_patterns/Factory/: factory.cpp  innerfactory  innerfactory.cpp
3_design_patterns/Flyweight/: Flyweight.cpp
3_design_patterns/General/: Log  Log.cpp  Machine  Machine.cpp  OCP.cpp
3_design_patterns/NullObject/: NullObject.cpp
3_design_patterns/Other/: RAII.cpp
3_design_patterns/Prototype/: Prototype.cpp
3_design_patterns/Proxy/: Proxy.cpp
(+9 files in other folders)
